[package]
name = "dltweaks"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
eframe = { version = "0.33.3", features = [ "default" ] }
egui = "0.33.3"
open = "5.3.3"
rfd = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.37.2", default-features = false, features = ["disk"] }
toml = "0.9.11"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"