[package]
name = "dltweaks"
version = "0.6.0-alpha.2"
edition = "2024"
description = "A Dying Light Tweaks Manager."
build = "build.rs"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = [ "accesskit", "default_fonts", "glow", "wayland", "x11"  ] }
egui = "0.33.3"
open = "5.3.3"
rfd = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.37.2", default-features = false, features = ["disk"] }
toml = "0.9.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[build-dependencies]
vergen-git2 = { version = "9", features = ["build"], optional = true }

# Sets up resource for windows target in compile-time.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.20"

[features]
# Enables debug info such as git hash and build date. CURRENTLY ALWAYS REQUIRED FEATURE
vergen = ["dep:vergen-git2"]
default = ["vergen"]